@@ -68,7 +68,7 @@
 */
 #define VERSION        1
 #define SUBVERSION     0
-#define SUBSUBVERSION  3
+#define SUBSUBVERSION  4
 #define VersionGE(h, a, b, c)    (((h)->version >= (a)) &&\
                                   ((h)->sversion >= (b)) &&\
                                   ((h)->ssversion >= (c)))
