@@ -1,6 +1,6 @@
 #include "nucleus.h"
 
-static char *rcsid="$Id: nucleus.c,v 1.11 2002/09/24 18:49:27 mfgu Exp $";
+static char *rcsid="$Id: nucleus.c,v 1.12 2004/01/08 19:04:03 mfgu Exp $";
 #if __GNUC__ == 2
 #define USE(var) static void * use_##var = (&use_##var, (void *) &var) 
 USE (rcsid);
@@ -8,18 +8,18 @@ USE (rcsid);
 
 static NUCLEUS atom;
 static char _ename[N_ELEMENTS][3] = 
-{"h", "he", "li", "be", "b", "c", "n", "o", "f",
- "ne", "na", "mg", "al", "si", "p", "s", "cl", "ar", 
- "k", "ca", "sc", "ti", "v", "cr", "mn", "fe", "co", 
- "ni", "cu", "zn", "ga", "ge", "as", "se", "br", "kr",
- "rb", "sr", "y", "zr", "nb", "mo", "tc", "ru", "rh", 
- "pd", "ag", "cd", "in", "sn", "sb", "te", "i", "xe",
- "cs", "ba", "la", "ce", "pr", "nd", "pm", "sm", "eu", 
- "gd", "tb", "dy", "ho", "er", "tm", "yb", "lu", "hf",
- "ta", "w", "re", "os", "ir", "pt", "au", "hg", "tl",
- "pb", "bi", "po", "at", "rn", "fr", "ra", "ac", "th",
- "pa", "u", "np", "pu", "am", "cm", "bk", "cf", "es",
- "fm", "md", "no", "lr", "rf", "db", "sg", "bh", "hs", "mt"};
+{"H", "He", "Li", "Be", "B", "C", "N", "O", "F",
+ "Ne", "Na", "Mg", "Al", "Si", "P", "S", "Cl", "Ar", 
+ "K", "Ca", "Sc", "Ti", "V", "Cr", "Mn", "Fe", "Co", 
+ "Ni", "Cu", "Zn", "Ga", "Ge", "As", "Se", "Br", "Kr",
+ "Rb", "Sr", "Y", "Zr", "Nb", "Mo", "Tc", "Ru", "Rh", 
+ "Pd", "Ag", "Cd", "In", "Sn", "Sb", "Te", "I", "Xe",
+ "Cs", "Ba", "La", "Ce", "Pr", "Nd", "Pm", "Sm", "Eu", 
+ "Gd", "Tb", "Dy", "Ho", "Er", "Tm", "Yb", "Lu", "Hf",
+ "Ta", "W", "Re", "Os", "Ir", "Pt", "Au", "Hg", "Tl",
+ "Pb", "Bi", "Po", "At", "Rn", "Fr", "Ra", "Ac", "Th",
+ "Pa", "U", "Np", "Pu", "Am", "Cm", "Bk", "Cf", "Es",
+ "Fm", "Md", "No", "Lr", "Rf", "Db", "Sg", "Bh", "Hs", "Mt"};
 
 static double _emass[N_ELEMENTS] = 
 {1, 4, 7, 9, 11, 12, 14, 16, 19, 20, 23, 24, 27, 28, 31, 32, 35, 40, 39, 
